# respire

./: .gitignore  README.md  next.config.ts  package.json  pyproject.toml
.devcontainer/: devcontainer.json
ai/: .env.example  .python-version  pyproject.toml  requirements.txt
ai/src/: main.py
ai/src/app/: chains.py
ai/src/app/utils/: rate_limit.py  session_history.py
ai/src/services/llm/: config.py
app/: page.tsx
components/: footer.tsx  hero.tsx  impacts.tsx  navbar.tsx
my-app/: package.json
my-app/app/: globals.css  layout.tsx  page.tsx
my-app/components/: about.tsx  footer.tsx  hero.tsx  impacts.tsx  navbar.tsx
